Tue Jun  3 15:54:46 CEST 2003  Jordi Mallach  <jordi@sindominio.net>

	* doc/gnome-mud-plugin-api/C/gnome-mud-plugin-api.xml: Change
	inclusion of monitor.py from an ENTITY to a XInclude.
	* doc/gnome-mud-manual/C/gnome-mud-manual-C.omf: Change section to
	GNOME|Games so it works with Yelp.
	* doc/gnome-mud-plugin-api/C/gnome-mud-plugin-api-C.omf: Change
	section to GNOME|Development.
	* doc/gnome-mud-plugin-api/C/Makefile.am: add monitor.py to entities.

	* src/init.c, src/python.c: disable PyGTK stuff for now, as it's
	broken according to Petter.

	* ROADMAP: Updated.

Mon Jun  2 17:41:35 CEST 2003  Jordi Mallach  <jordi@sindominio.net>

	* doc/gnome-mud-manual/C/gnome-mud-manual-C.omf: Fix DTD errors.
	* doc/gnome-mud-plugin-api/C/gnome-mud-plugin-api-C.omf: Likewise.

Mon Jun  2 17:08:47 CEST 2003  Jordi Mallach  <jordi@sindominio.net>

	* doc/gnome-mud-manual/C/gnome-mud-manual.sgml: Rename to .xml.
	* doc/gnome-mud-manual/C/gnome-mud-manual.xml: Convert to GNOME2
	documentation format.
	* doc/gnome-mud-plugin-api/C/gnome-mud-plugin-api.sgml,
	doc/gnome-mud-plugin-api/C/gnome-mud-plugin-api.xml: Likewise.
	* doc/omf-output/Makefile.am: Added, scrollkeeper stuff.
	* doc/Makefile.am: Updated.
	* configure.ac: add doc/omf-install/Makefile to AC_OUTPUT.


Fri May 30 12:49:42 CEST 2003  Robin Ericsson  <lobbin@localhost.nu>

	* AUTHORS, ROADMAP, configure.ac: Update for 0.10.0.

Wed May 28 13:26:44 CEST 2003  Jordi Mallach  <jordi@sindominio.net>

	* NEWS, README: Update for 0.10.0.

Wed May 28 10:43:31 CEST 2003  Robin Ericsson  <lobbin@localhost.nu>

	* Restructuring of gconf keys.	

Tue May 20 12:41:44 CEST 2003  Jordi Mallach  <jordi@sindominio.net>

	* gnome-mud.schemas.in: Grammar fixes.
	* src/prefs.c (window_prefs): Reword movement commands tooltip a bit.

Fri May  2 11:25:36 CEST 2003  Robin Ericsson  <lobbin@localhost.nu>

	* Big patch from Remi Bonnet on the automapper.

	* po/*.po: Updated.
