@@ -1,7 +1,10 @@
 [Desktop Entry]
+Encoding=UTF-8
 _Name=GNOME-Mud
 _Comment=The GNOME MUD Client
 Exec=gnome-mud
 Icon=gnome-gmush.png
-Terminal=0
+StartupNotify=true
+Terminal=false
 Type=Application
+Categories=GNOME;Application;Game;Adventure;
