@@ -1,3 +1,7 @@
+Tue Jun  3 18:02:02 CEST 2003  Jordi Mallach  <jordi@sindominio.net>
+
+	* gnome-mud.desktop.in: Changes to make it freedesktop.org-compliant.
+
 Tue Jun  3 15:54:46 CEST 2003  Jordi Mallach  <jordi@sindominio.net>
 
 	* doc/gnome-mud-plugin-api/C/gnome-mud-plugin-api.xml: Change
